--- a/embed.css
+++ b/embed.css
@@ -7,3 +7,18 @@ body{
 .main{
  max-width: fit-content !important; 
 }
+.ticket-label{
+ display: none !important;
+}
+
+.ticket-icon{
+ display: none !important;
+}
+
+.form{
+ width: 35vw !important;
+}
+.question{
+    max-width: 45% !important;
+    margin: 2.5% !important;
+}
